[tool.poetry]
name = "tugas-backupmilestone4"
version = "0.1.0"
description = ""
authors = ["vieri <vieri@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
flask-jwt-extended = "^4.6.0"
flask-sqlalchemy = "^3.1.1"
python-dotenv = "^1.0.1"
mysql-connector-python = "^9.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
